agregar formulario de carrito

--- a/Giant_Form.vbproj
+++ b/Giant_Form.vbproj
@@ -101,15 +101,66 @@
       <DependentUpon>Form.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form_20.designer.vb">
+      <DependentUpon>Form_20.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_20.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_19.designer.vb">
+      <DependentUpon>Form_19.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_19.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_15.designer.vb">
+      <DependentUpon>Form_15.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_15.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_16.designer.vb">
+      <DependentUpon>Form_16.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_16.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_17.designer.vb">
+      <DependentUpon>Form_17.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_17.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_11.designer.vb">
+      <DependentUpon>Form_11.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_11.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_12.designer.vb">
+      <DependentUpon>Form_12.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_12.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_9.designer.vb">
+      <DependentUpon>Form_9.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_9.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_10.designer.vb">
+      <DependentUpon>Form_10.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_10.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form_18.designer.vb">
       <DependentUpon>Form_18.vb</DependentUpon>
     </Compile>
     <Compile Include="Form_18.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_15.vb" />
-    <Compile Include="Form_16.vb" />
-    <Compile Include="Form_17.vb" />
     <Compile Include="Form_14.designer.vb">
       <DependentUpon>Form_14.vb</DependentUpon>
     </Compile>
@@ -122,10 +173,6 @@
     <Compile Include="Form_13.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_11.vb" />
-    <Compile Include="Form_12.vb" />
-    <Compile Include="Form_9.vb" />
-    <Compile Include="Form_10.vb" />
     <Compile Include="Form_8.designer.vb">
       <DependentUpon>Form_8.vb</DependentUpon>
     </Compile>
@@ -210,6 +257,33 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form.resx">
       <DependentUpon>Form.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_20.resx">
+      <DependentUpon>Form_20.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_19.resx">
+      <DependentUpon>Form_19.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_15.resx">
+      <DependentUpon>Form_15.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_16.resx">
+      <DependentUpon>Form_16.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_17.resx">
+      <DependentUpon>Form_17.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_11.resx">
+      <DependentUpon>Form_11.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_12.resx">
+      <DependentUpon>Form_12.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_9.resx">
+      <DependentUpon>Form_9.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_10.resx">
+      <DependentUpon>Form_10.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_18.resx">
       <DependentUpon>Form_18.vb</DependentUpon>
