--- a/Giant_Form.vbproj
+++ b/Giant_Form.vbproj
@@ -101,6 +101,18 @@
       <DependentUpon>Form.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form1.designer.vb">
+      <DependentUpon>Form1.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form1.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.designer.vb">
+      <DependentUpon>Form2.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form2.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form3.designer.vb">
       <DependentUpon>Form3.vb</DependentUpon>
     </Compile>
@@ -117,6 +129,24 @@
       <DependentUpon>Form5.vb</DependentUpon>
     </Compile>
     <Compile Include="Form5.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_24.designer.vb">
+      <DependentUpon>Form_24.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_24.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_25.designer.vb">
+      <DependentUpon>Form_25.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_25.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_26.designer.vb">
+      <DependentUpon>Form_26.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_26.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form_21.designer.vb">
@@ -258,6 +288,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Module1.vb" />
+    <Compile Include="Module_6.vb" />
     <Compile Include="Module_5.vb" />
     <Compile Include="Module_4.vb" />
     <Compile Include="Module_2.vb" />
@@ -295,6 +326,12 @@
     <EmbeddedResource Include="Form.resx">
       <DependentUpon>Form.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form3.resx">
       <DependentUpon>Form3.vb</DependentUpon>
     </EmbeddedResource>
@@ -303,6 +340,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form5.resx">
       <DependentUpon>Form5.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_24.resx">
+      <DependentUpon>Form_24.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_25.resx">
+      <DependentUpon>Form_25.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_26.resx">
+      <DependentUpon>Form_26.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_21.resx">
       <DependentUpon>Form_21.vb</DependentUpon>
